# roguelikes

./: .gitignore  LICENSE  README.md  index.html  params.json
cellular-automata/: CMakeLists.txt  main.cpp
jb-test/: CMakeLists.txt  gameutil.cpp  gameutil.h  jbdungeon.cpp  jbdungeon.h  jbmaze.cpp  jbmaze.h  jbmazemask.cpp  jbmazemask.h  main.cpp
libtcod/makefiles/: makefile-osx
ouruo-alpha/: CMakeLists.txt
ouruo-alpha/inc/: actor.hpp  ai.hpp  attacker.hpp  attribute.hpp  class.hpp  container.hpp  destructible.hpp  engine.hpp  gui.hpp  main.hpp  map.hpp  persistent.hpp  pickable.hpp  skill.hpp
ouruo-alpha/src/: actor.cpp  ai.cpp  attacker.cpp  attribute.cpp  class.cpp  container.cpp  destructible.cpp  engine.cpp  gui.cpp  main.cpp  map.cpp  persistent.cpp  pickable.cpp  skill.cpp
